Implemented checks for LCT recipes